public/style.css
/* Imports */

@import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css");
@import url("https://netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css");
@import url(https://fonts.googleapis.com/css?family=Amatic+SC|Pacifico|Quicksand);

html,
body {
    font-family: 'Quicksand', sans-serif;
}

body {
    overflow-x: hidden;
}

h1, h2, h3, h4, h5, h6 {
    margin: 0px;
}

.bar-panel {
    width: 100%;
    height: 100vh;
    background-attachment: scroll;
    background-size: 100% 100%;
}

#loading-panel {
    z-index: 10;
    background-color: #000;
    position: fixed;
    left: 0px;
    top: 0px;
    opacity: 0.5
}

.fortune-div {
    position: fixed;
    width: 100%;
    height: 40vh;
    top: 20vh;
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
}

#fortune2 {
    background-image: url(img/fortuneteller2.svg);
    -moz-animation: fortune2ani 2s linear infinite;
    -o-animation: fortune2ani 2s linear infinite;
    -webkit-animation: fortune2ani 2s linear infinite;
    animation: fortune2ani 2s linear infinite;
}

#fortune3 {
    background-image: url(img/fortuneteller3.svg);
    -moz-animation: fortune3ani 2s linear infinite;
    -o-animation: fortune3ani 2s linear infinite;
    -webkit-animation: fortune3ani 2s linear infinite;
    animation: fortune3ani 2s linear infinite;
}

#fortune4 {
    background-image: url(img/fortuneteller4.svg);
    -moz-animation: fortune4ani 2s linear infinite;
    -o-animation: fortune4ani 2s linear infinite;
    -webkit-animation: fortune4ani 2s linear infinite;
    animation: fortune4ani 2s linear infinite;
}

@keyframes fortune2ani {
    0% { opacity: 1; }
    25% { opacity: 1; }
    26% { opacity: 0; }
    50% { opacity: 0; }
    51% { opacity: 1; }
    75% { opacity: 1; }
    76% { opacity: 0; }
    100% { opacity: 0; }
}

@-webkit-keyframes fortune2ani {
    0% { opacity: 1; }
    25% { opacity: 1; }
    26% { opacity: 0; }
    50% { opacity: 0; }
    51% { opacity: 1; }
    75% { opacity: 1; }
    76% { opacity: 0; }
    100% { opacity: 0; }
}

@-moz-keyframes fortune2ani {
    0% { opacity: 1; }
    25% { opacity: 1; }
    26% { opacity: 0; }
    50% { opacity: 0; }
    51% { opacity: 1; }
    75% { opacity: 1; }
    76% { opacity: 0; }
    100% { opacity: 0; }
}

@keyframes fortune3ani {
    0% { opacity: 0; }
    25% { opacity: 0; }
    26% { opacity: 1; }
    50% { opacity: 1; }
    51% { opacity: 0; }
    100% { opacity: 0; }
}

@-webkit-keyframes fortune3ani {
    0% { opacity: 0; }
    25% { opacity: 0; }
    26% { opacity: 1; }
    50% { opacity: 1; }
    51% { opacity: 0; }
    100% { opacity: 0; }
}

@-moz-keyframes fortune3ani {
    0% { opacity: 0; }
    25% { opacity: 0; }
    26% { opacity: 1; }
    50% { opacity: 1; }
    51% { opacity: 0; }
    100% { opacity: 0; }
}

@keyframes fortune4ani {
    0% { opacity: 0; }
    75% { opacity: 0; }
    76% { opacity: 1; }
    100% { opacity: 1; }
}

@-webkit-keyframes fortune4ani {
    0% { opacity: 0; }
    75% { opacity: 0; }
    76% { opacity: 1; }
    100% { opacity: 1; }
}

@-moz-keyframes fortune4ani {
    0% { opacity: 0; }
    75% { opacity: 0; }
    76% { opacity: 1; }
    100% { opacity: 1; }
}

@-webkit-keyframes fortune {
    0% { background-image: url(img/fortuneteller1.svg); }
    12.5% { background-image: url(img/fortuneteller2.svg); }
    25% { background-image: url(img/fortuneteller3.svg); }
    37.5% { background-image: url(img/fortuneteller2.svg); }
    50% { background-image: url(img/fortuneteller1.svg); }
    62.5% { background-image: url(img/fortuneteller2.svg); }
    75% { background-image: url(img/fortuneteller4.svg); }
    87.5% { background-image: url(img/fortuneteller2.svg); }
    100% { background-image: url(img/fortuneteller1.svg); }
}

@-moz-keyframes fortune {
    0% { background-image: url(img/fortuneteller1.svg); }
    12.5% { background-image: url(img/fortuneteller2.svg); }
    25% { background-image: url(img/fortuneteller3.svg); }
    37.5% { background-image: url(img/fortuneteller2.svg); }
    50% { background-image: url(img/fortuneteller1.svg); }
    62.5% { background-image: url(img/fortuneteller2.svg); }
    75% { background-image: url(img/fortuneteller4.svg); }
    87.5% { background-image: url(img/fortuneteller2.svg); }
    100% { background-image: url(img/fortuneteller1.svg); }
}

#logo-parallax .parallax__layer--back {
    background-image: url("img/rainbow-star-min.png");
}

#logo-parallax,
#about-me-parallax {
    z-index: 1;
}

#about-me-parallax .parallax__layer--base {
    background-image: url("img/galaxy-min.jpg");
}

#portfolio-parallax .parallax__layer--back {
    background-image: url("img/ocean-min.jpg");
}

#contacts-parallax .parallax__layer--base {
    background-image: url("img/jellyfish.jpg");
}

.parallax__layer.parallax__layer--back,
.parallax__layer.parallax__layer--base {
    background-size: cover;
}

#logo-img {
    width: 100%;
    height: 30vh;
    padding: 0px 10%;
    margin-top: 30vh;
    opacity: 0.8;
}

#logo-img:hover {
    opacity: 1;
}


.name-label,
.scroll-down-img {
    text-align: center;
    color: #FFFFFF;
    letter-spacing: 10px;
}

.scroll-down-img {
    width: 100%;
    -moz-animation: flash 2s linear infinite;
    -o-animation: flash 2s linear infinite;
    -webkit-animation: flash 2s linear infinite;
    animation: flash 2s linear infinite;
}

@keyframes flash {
    0% { opacity: 1; }
    50% { opacity: 0; }
    100% { opacity: 1; }
}

@-webkit-keyframes flash {
    0% { opacity: 1; }
    50% { opacity: 0; }
    100% { opacity: 1; }
}

@-moz-keyframes flash {
    0% { opacity: 1; }
    50% { opacity: 0; }
    100% { opacity: 1; }
}

#self-img {
    position: absolute;
    right: 0;
    z-index: 1;
    float: right;
    height: 80vh;
    width: 30%;
    background-image: url(img/run.svg);
    background-repeat: no-repeat;
    background-position: bottom;
    background-size: contain;
    margin-top: 20vh;
}

#clouds-container {
    position: absolute;
    width: 100%;
    top: 15px;
    height: 60vh;
    opacity: 0.3;
}

.cloud-img {
    height: 100%;
    width: 50%;
    background-repeat: no-repeat;
    background-size: contain;
    position: absolute;
}

#cloud1-img {
    background-image: url(img/cloud1.svg);
    background-position: top right;
    right: 5%;
}

#cloud2-img {
    background-image: url(img/cloud2.svg);
    left: 5%;
}

#cloud3-img {
    background-image: url(img/cloud3.svg);
    left: 25%;
}

.clouds {
    background: transparent url(img/clouds-min.png) repeat top center;
    z-index: 3;
    display: inline;
    position: absolute;
    left: 0px;
    width: 100%;
    height: 160px;
    filter: invert(100%);
    -webkit-filter: invert(100%);
    background-size: 100% 250%;

    -moz-animation: move-clouds-back 200s linear infinite;
    -o-animation: move-clouds-back 200s linear infinite;
    -webkit-animation: move-clouds-back 200s linear infinite;
    animation: move-clouds-back 200s linear infinite;
}

@keyframes move-clouds-back {
    from {background-position:0 0;}
    to {background-position:10000px 0;}
}

@-webkit-keyframes move-clouds-back {
    from {background-position:0 0;}
    to {background-position:10000px 0;}
}

@-moz-keyframes move-clouds-back {
    from {background-position:0 0;}
    to {background-position:10000px 0;}
}

.circle-link {
    z-index: 4;
    height: 70px;
    width: 70px;
    display: inline-block;
    position: relative;
    margin-top: 45px;
    margin-left: 5%;
    opacity: 0.8;
}

.circle-link:first-of-type {
    margin-left: 0px;
}

.circle-link:hover {
    opacity: 1;
}

.circle-link > i {
    height: 70px;
    width: 70px;
    padding-top: 12px;
    text-align: center;
    border: 2px solid;
    border-radius: 50%;
    font-size: 3em;
}

.contacts-background {
    background-image: url("img/clouds-min.jpg");
    background-position: 0% 100%;
    text-align: center;
    height: 160px;
    position: absolute;
    bottom: 0;
    z-index: 4;
}

#koi-img {
    width: 100%;
    padding: 20px;
    opacity: 0.8;
    max-height: 50%;
}

#koi-img:hover {
    opacity: 1;
}

#deep-ocean {
    background: linear-gradient(0deg, #04316b, #2d6dbe, #009e57);
    background-size: 600% 600%;
    
    -webkit-animation: deep-ocean 15s ease infinite;
    -moz-animation: deep-ocean 15s ease infinite;
    animation: deep-ocean 15s ease infinite;
}

@-webkit-keyframes deep-ocean {
    0%{background-position:50% 0%}
    50%{background-position:51% 100%}
    100%{background-position:50% 0%}
}
@-moz-keyframes deep-ocean {
    0%{background-position:50% 0%}
    50%{background-position:51% 100%}
    100%{background-position:50% 0%}
}
@keyframes deep-ocean {
    0%{background-position:50% 0%}
    50%{background-position:51% 100%}
    100%{background-position:50% 0%}
}

.left-main {
    width: 70%;
    padding: 20px;
    font-size: 35px;
    font-family: 'Amatic SC', cursive;
    color: #8576D1;
}

.text-header {
    font-size: 50px;
    font-family: 'Amatic SC', cursive;
    text-align: center;
    color: #FF5A56;
    padding: 20px;
}

.sub-div {
    background-color: rgba(0, 0, 0, 0.75);
    padding: 10px;
    border-radius: 10px;
}

.sub-div > p {
    text-align: center;
}

/* Parallax */
.parallax {
    height: 500px; /* fallback for older browsers */
    height: 100vh;
    overflow-x: hidden;
    overflow-y: auto;
    -webkit-perspective: 300px;
    perspective: 300px;
    -webkit-perspective-origin-x: 100%;
    perspective-origin-x: 100%;
}

.parallax__group {
    position: relative;
    height: 500px; /* fallback for older browsers */
    height: 100vh;
    -webkit-transform-style: preserve-3d;
    transform-style: preserve-3d;
  }

.parallax__layer {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    -webkit-transform-origin-x: 100%;
    transform-origin-x: 100%;
  }

.parallax__layer--fore {
    -webkit-transform: translateZ(90px) scale(.7);
    transform: translateZ(90px) scale(.7);
    z-index: 1;
  }

.parallax__layer--base {
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    z-index: 4;
  }

.parallax__layer--back {
    -webkit-transform: translateZ(-293px) scale(2.03); 
    transform: translateZ(-293px) scale(2.03);
    z-index: 3;
}

.parallax__layer--deep {
    -webkit-transform: translateZ(-600px) scale(3);
    transform: translateZ(-600px) scale(3);
    z-index: 2;
}

/* END Parallax */

.title-top {
    text-align: center;
    margin: 15px;
    color: #FFF;
    height: 5%
    font-size: 50px;
}

#about-me-parallax .container {
    height: 95%;
    padding-top: 15%;
}

@media (min-width: 768px) {
    #about-me-parallax .container {
        padding-top: 12%;
    }
    
    .contacts-background {
        height: 200px;
    }
    
    .clouds {
        height: 200px;
    }
    
    .circle-link {
        height: 100px;
        width: 100px;
        margin-top: 50px;
        margin-left: 5%;
    }
    
    .circle-link > i {
        height: 100px;
        width: 100px;
        padding-top: 20px;
        font-size: 4em;
    }
}

.about-tile {
    padding: 15px 0;
}

.about-tile > img {
    margin: 0 20% 5px 20%;
    opacity: 0.7;
}

.about-tile:hover {
    cursor: pointer;
}

.about-tile:hover > p {
    color: #EB9FEF;
}

.about-tile:hover > img {
    opacity: 1;
}

.tile-label {
    color: #FFF;
    text-align: center;
    font-size: 30px;
    padding-top: 5px;
}

